# TS2-Extender

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  Lua Loader.lua  README.md  TS2Extender.ini  luac.out
Downloads/: README.md  ld_TS2Extender_uniformFix.package  ld_WallTopFix.package  ld_dateStoodUpFix.package  ld_timingFix.package
Lua/: TS2Extender.lua
TSBin/lua/: TS2Extender.lua
TSData/Res/ObjectScripts/: ObjectScripts.package
include/: Addresses.h  Core.h  Id64.h  IdManager.h  Logging.h  LuaCallback.h  LuaCheatCommand.h  LuaExtensions.h  PatchVersion.h  StringId.h  Utils.h  config.h  scan.h
include/ts2/: CheatSystem.h  cCheatCommand.h  cEdithObjectModule.h  cEdithObjectTestSim.h  cIGZLua5Thread.h  cRZRandom.h  cRZString.h  cTSCheatSystem.h  cTSGlobals.h  cTSInteraction.h  cTSObject.h  cTSPerson.h  cTSString.h  cUserInput.h  lua.h
src/: Addresses.cpp  Core.cpp  IdManager.cpp  LuaCallback.cpp  LuaCheatCommand.cpp  LuaExtensions.cpp  config.cpp  dllmain.cpp  scan.cpp
src/ts2/: CheatSystem.cpp  cCheatCommand.cpp  cEdithObjectModule.cpp  cEdithObjectTestSim.cpp  cRZString.cpp  cTSCheatSystem.cpp  cTSGlobals.cpp  cTSInteraction.cpp  cTSObject.cpp  cTSPerson.cpp  cTSString.cpp  cUserInput.cpp  lua.cpp
